<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_EL9227_IN" Id="{ca7522f7-b0c5-4cf7-ad1c-3d3981c92427}">
    <Declaration><![CDATA[TYPE ST_EL9227_IN :
STRUCT
	stStatus	AT%I*:	ST_Status;
	nLoad		AT%I*:	UINT;
	nCurrent	AT%I*:	UINT;
	nVoltageIn	AT%I*:	UINT;
	nVoltageOut	AT%I*:	UINT;
	stControl	AT%Q*:	ST_Control;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>