<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_UeberstromTabelle" Id="{b7ca8559-6e4e-4c27-91b0-6a690abd4aa3}">
    <Declaration><![CDATA[TYPE ST_UeberstromTabelle :
STRUCT
	// Status
	sKlemme:				STRING;
	sKanal:					STRING;
	sLoad:					STRING;
	sCurrent:				STRING;
	sVoltageIn:				STRING;
	sVoltageOut:			STRING;
	sEnabled:				STRING;
	sTripped:				STRING;
	sShortCircuit:			STRING;
	sOverload:				STRING;
	sHardwareProtection:	STRING;
	sOvervoltage:			STRING;
	sUndervoltage:			STRING;
	sCurrentLevelWarning:	STRING;
	sCoolDownLock:			STRING;
	sDisabledBySwitch:		STRING;
	sDisabledByDI:			STRING;
	sDisabledByOutput:		STRING;
	
	
	
	
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>